Fix element positions on mobile and fix export btn on dashboard

--- a/src/ej/static/ej/scss/_elements.scss
+++ b/src/ej/static/ej/scss/_elements.scss
@@ -113,7 +113,9 @@ ul.errorlist {
 }
 
 .input-error {
-    input, input:hover, input:focus {background: rgba(255, 62, 114, 0.15);}
+    input, input:hover, input:focus {
+        background: rgba(255, 62, 114, 0.15);
+    }
 }
 
 .register-form {
@@ -132,26 +134,22 @@ ul.errorlist {
 
     }
 
-    &__grid {
+    &-container {
         display: grid;
-        grid-template-columns: 10% 37.5% 5% 37.5% 10%;
+        grid-template-columns: 7% 40.5% 5% 40.5% 7%;
         max-width: unset !important;
         padding: unset !important;
 
-        &--first-column {
-            grid-column: 2/3;
+        ul.errorlist {
+            margin-top: -1rem;
+        }
 
-            &--password {
-                input {margin: 0;}
-            }
+        &--first-column {
+            grid-column: 2;
         }
 
         &--second-column {
-            grid-column: 4/5;
-
-            &--email {
-                input {margin: 0;}
-            }
+            grid-column: 4;
         }
 
         &--full-width {
@@ -400,7 +398,7 @@ legend {
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media (max-width: 320px) { 
     .terms {
         &__content {
             height: 15.4rem;
@@ -413,11 +411,21 @@ legend {
         }
     }
     .register-form {
-        &__grid {
-            grid-template-columns: 7% auto 7%;
+        &-container {
+            grid-template-columns: 7% 80% 7%;
+            
+            &--first-column {
+                &--password {
+                    input {margin: 0.375rem 0 1.5rem 0;}
+                }
+            }
 
             &--second-column {
                 grid-column: 2/3;
+                
+                &--email {
+                    input {margin: 0.375rem 0 1.5rem 0;}
+                } 
             }
             &--full-width {
                 grid-column: 2/3;
@@ -432,8 +440,125 @@ legend {
             margin-bottom: 0;
             margin-top: 0;
 
-            h2 {
-                margin: 1.91094rem 0 0.79219rem 0;
+            h1 {
+                margin: 3.375rem 0 1.5rem 0;
+            }
+        }
+        &__image {
+            width: 11.5625rem;
+            height: 9.75rem;
+            margin-bottom: 1.75rem;
+        }
+
+        &__input--margin {
+            input {
+                margin-bottom: 2.625rem;
+            }
+        }
+
+        &__register-buttons {
+            flex-direction: column-reverse;
+            align-items: center;
+
+            .login-form__social-button {
+                width: 17.5rem;
+            }
+        }
+
+        &__submit-button {
+            margin-bottom: 0.9rem !important;
+        }
+
+    }
+
+    .register-redirection {
+        flex-direction: column;
+
+        &__hr {
+            width: 100%;
+            padding: 0 1.5rem;
+        }
+
+        &__button {
+            span {
+                margin-top: 1.58rem;
+            }
+        }
+    }
+
+    .login-form {
+        &__input #id_password {
+            margin-bottom: 1rem;
+        }
+
+        &__button-container {
+            flex-direction: column;
+            row-gap: 1.21rem;
+            margin-bottom: unset;
+        }
+
+        &__label {
+            text-align: center !important;
+        }
+
+        &__social-button {
+            width: 100%;
+        }
+
+        &__reset-password {
+            margin-bottom: 1.1875rem;
+        }
+
+        &__submit-button {
+            margin-bottom: 1.5rem !important;
+        }
+    }
+}
+
+@media (max-width: 900px) and (min-width: 321px) {
+    .terms {
+        &__content {
+            height: 15.4rem;
+        }
+
+        &__checkbox {
+            label {
+                margin-bottom: 2.625rem;
+            }
+        }
+    }
+    .register-form {
+        &-container {
+            grid-template-columns: 4% auto 4%;
+            
+            &--first-column {
+                &--password {
+                    input {margin: 0.375rem 0 1.5rem 0;}
+                }
+            }
+
+            &--second-column {
+                grid-column: 2/3;
+                
+                &--email {
+                    input {margin: 0.375rem 0 1.5rem 0;}
+                } 
+            }
+            &--full-width {
+                grid-column: 2/3;
+            }
+            &--align-end {
+                justify-self: center;
+            }
+        }
+        &__title {
+            grid-column: 2/3;
+            flex-direction: column;
+            margin-bottom: 0;
+            margin-top: 0;
+
+            h1 {
+                margin: 3.375rem 0 1.5rem 0;
             }
         }
         &__image {
